Create object using class constructor with Javascript

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advance Javascript Learning</title>
 
-    <script src="object/prototype.js"></script>
+    <script src="object/class-constructor.js"></script>
 </head>
 </head>
 <body>
